<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:layout_marginTop="15dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:cardBackgroundColor="@color/cardView_bg__light"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/academic_home_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@mipmap/bekhozhin"
            android:scaleType="centerCrop"
            android:contentDescription="@string/main_background"
            />

        <TextView
            android:id="@+id/home_academic_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:text="@string/toraigyrov_name"

            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/home_academic_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/toraigyrov_desc"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_button"
            android:backgroundTint="@color/colorPrimary"
            android:layout_gravity="end"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            />


    </LinearLayout>

</androidx.cardview.widget.CardView>